// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display/Typography BottomSpacing smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-mui-classname"
   data-cy="typography"
>
  Text example
</p>
`;

exports[`Display/Typography CustomContent smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 css-mui-classname"
   data-cy="typography"
>
  <span>
    <b>
      Strong
    </b>
    text
  </span>
</p>
`;

exports[`Display/Typography DisplayBlock smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 css-mui-classname"
   data-cy="typography"
>
  Text example
</p>
`;

exports[`Display/Typography DisplayInline smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 css-mui-classname"
   data-cy="typography"
>
  Text example
</p>
`;

exports[`Display/Typography Loading smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 css-mui-classname"
   data-cy="typography-loading"
>
  <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-mui-classname">
  </span>
</p>
`;

exports[`Display/Typography Localized smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 css-mui-classname"
   data-cy="typography"
>
  Testo
</p>
`;

exports[`Display/Typography Primary smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 css-mui-classname"
   data-cy="typography"
>
  Text example
</p>
`;

exports[`Display/Typography Truncated smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-mui-classname"
   data-cy="typography"
>
  Text example
</p>
`;

exports[`Display/Typography VariantBody smoke-test 1`] = `
<p class="MuiTypography-root MuiTypography-body1 css-mui-classname"
   data-cy="typography"
>
  Text example
</p>
`;

exports[`Display/Typography VariantCaption smoke-test 1`] = `
<span class="MuiTypography-root MuiTypography-caption css-mui-classname"
      data-cy="typography"
>
  Text example
</span>
`;

exports[`Display/Typography VariantLabel smoke-test 1`] = `
<h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
    data-cy="typography"
>
  Text example
</h3>
`;

exports[`Display/Typography VariantOverline smoke-test 1`] = `
<h4 class="MuiTypography-root MuiTypography-overline css-mui-classname"
    data-cy="typography"
>
  Text example
</h4>
`;

exports[`Display/Typography VariantPagetitle smoke-test 1`] = `
<h1 class="MuiTypography-root MuiTypography-h5 css-mui-classname"
    data-cy="typography"
>
  Text example
</h1>
`;

exports[`Display/Typography VariantTitle smoke-test 1`] = `
<h2 class="MuiTypography-root MuiTypography-h6 css-mui-classname"
    data-cy="typography"
>
  Text example
</h2>
`;
